<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>or_urdf</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="ingui2@illinois.edu">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <!-- <depend>srdfdom</depend> -->
  <build_depend>boost</build_depend>
  <build_depend>tinyxml2</build_depend>
  <build_depend>openrave</build_depend>
  <build_depend>srdfdom</build_depend>
  <build_depend>urdf</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>tinyxml2</exec_depend>
  <exec_depend>openrave</exec_depend>
  <exec_depend>srdfdom</exec_depend>
  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
